--- a/Restaurant/templates/restaurant/search.html
+++ b/Restaurant/templates/restaurant/search.html
@@ -2,24 +2,33 @@
 
 {% block body %}
 
-    {% if not result %}
+{% if not result %}
 
-        <h1>검색 결과가 없습니다</h1>
 
-    {% else %}
 
-        {% for r in result.all %}
-        <div class="container"> 
-            <div class="card">
-                <div class="card-body">
-                    <h3>{{ r.title }}</h3>
-                    <p>{{ r.category }}&nbsp;&nbsp;<a href="{% url 'Restaurant:detail' r.id %}"> 자세히 보기</a></p> 
-                </div>
-            </div>
+<div class="content">
+    <img src="https://th.bing.com/th/id/OIP.gunsgZWV1yJavsb9e0C7iwHaHa?w=167&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7"
+        style="width: 5%">
+    <h1>관련된 정보를 찾지 못하였습니다.</h1>
+    <b>&nbsp;&nbsp&nbsp;&nbsp조금 더 정확한 단서가 필요합니다</b>
+    <a></a>
+    <img src="https://scontent-gmp1-1.xx.fbcdn.net/v/t1.6435-9/157697457_874279869803643_4795892811642483961_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=730e14&_nc_ohc=ykYmfLY8qPgAX-TPtlr&_nc_ht=scontent-gmp1-1.xx&oh=00_AfDLwBkNFd-3YcjMG4T1NKnGeUDq5heqyWAOthZAwDovnQ&oe=638C18C6"
+        alt="">
+</div>
+{% else %}
+
+{% for r in result.all %}
+<div class="container">
+    <div class="card">
+        <div class="card-body">
+            <h3>{{ r.title }}</h3>
+            <p>{{ r.category }}&nbsp;&nbsp;<a href="{% url 'Restaurant:detail' r.id %}"> 자세히 보기</a></p>
         </div>
-        <br>
-        {% endfor %}
+    </div>
+</div>
+<br>
+{% endfor %}
 
-    {% endif %}
+{% endif %}
 
 {% endblock %}
