--- a/reviews/templates/reviews/detail.html
+++ b/reviews/templates/reviews/detail.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load django_bootstrap5 %}
-
+{% load static %}
 {% block body %} 
 <h1>{{ review.title }}</h1>
 <div>
@@ -22,10 +22,10 @@
                     <hr>
                     <!--내용-->
                     {% if review.image %}
-                    <img src="{{ review.image.url }}" alt="{{ review.image }}" width="400" height="300">
+                    <img src="{{ review.image.url }}" alt="{{ review.image }}" width="400px" height="300px">
                     {% endif %}
                     <div>
-                      {{ review.content }}
+                      {{ review.content|linebreaksbr }}
                     </div>
                     <br>
                     <div class="d-flex justify-content-center" style="margin-bottom:-10px; margin-top: -6px;">
@@ -58,6 +58,31 @@
                   </div>
                 </div>
             </div>
+            <div id="delete_modal" class="modal fade" tabindex="-1" role="dialog">
+              <div class="modal-dialog" role="document">
+                  <div class="modal-content">
+                      <div class="modal-header">
+                          <h5 class="modal-title">삭제경고</h5>
+                          <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+                              <span aria-hidden="true">&times;</span>
+                          </button>
+                      </div>
+                      <div class="modal-body">
+                          <p>게시글을 삭제하시겠습니까?</p>
+                      </div>
+                      <div class="modal-footer">
+                          <button onclick="deleteModal()" type="button" class="btn btn-dark">삭제하기</button>
+                          <button type="button" class="btn btn-light" data-bs-dismiss="modal">취소하기</button>
+                      </div>
+                  </div>
+              </div>
+              <script type="text/javascript">
+                function deleteModal() {
+                    location.replace('/reviews/{{ review.id }}/delete/');
+                }
+            </script>
+          </div>
+      </div>
             <br>
             <!--댓글-->
             <div class="card" style="width: 100%;">
@@ -161,5 +186,6 @@
           commentForm.reset()
         })
       })
-    </script> 
+    </script>
+ 
 {% endblock %}
