--- a/users/templates/users/backup2.html
+++ b/users/templates/users/backup2.html
@@ -1,18 +1,17 @@
 {% extends 'base.html' %}
 {% load django_bootstrap5 %}
 {% load static %}
-
 {% block body %}
 <div class="container">
-    <div style="margin-top: 5rem ;">
+    <div style="margin-top: 5rem !important;">
         <div class="col-12">
-            <div class="row justify-content-center">
-                <div class="card" style="width: 500px;">
+            <div class="row justify-content-center text-center">
+                <div class="card col-6">
                     <div class="card-header" style="padding-bottom:8px;">
-                        <strong style="font-size: 18px;"><i class="fas fa-user-lock"></i>&nbsp;&nbsp;내정보 변경</strong>
+                        <strong style="font-size: 18px;"><i class="fas fa-user-edit"></i>&nbsp;&nbsp;내 정보수정</strong>
                     </div>
-                    <div class="card-body d-flex justify-content-center" >
-                        <form method="POST" novalidate >
+                    <div class="card-body">
+                        <form method="POST">
                             {% csrf_token %}
                             <table style="color:black; margin-left:10px;">
                                 <tr>
@@ -25,22 +24,22 @@
                                 </tr>
                                 <tr>
                                     <td class="profile_title">이메일</td>
-                                    <td class="profile_content">{{ form.email }}</td>
+                                    <td class="profile_content">&nbsp;&nbsp;{{ form.email }}</td>
                                 </tr>
                                 <tr>
                                     <td class="profile_title">연락처</td>
                                     <td class="profile_content">{{ form.hp }}</td>
                                 </tr>
                             </table>
+                            <br>
                             <div style="text-align: center; margin-bottom:-15px;">
                                 <a onclick="location.href='/users/{{user.id}}'" class="btn btn-sm" id="back_btn"><i
                                         class="fa fa-reply"></i>&nbsp;돌아가기</a>
                                 <button type="submit" class="btn btn-sm" id="detail_btn"><i
                                         class="fas fa-check"></i>&nbsp;수정하기</button>
                             </div>
-                  
                         </form>
-                        </div>
+
                     </div>
                 </div>
             </div>
@@ -48,4 +47,4 @@
     </div>
 </div>
 
-{% endblock %}
+{% endblock body %}
