--- a/users/templates/users/detail.html
+++ b/users/templates/users/detail.html
@@ -17,8 +17,8 @@
                             <table style="color:black; margin-left:10px;">
                                 <tr>
                                     <td>
-                                        {% if profile.image %}
-                                        <img src="{{ profile.image.url }}" alt="" style="width: 100px; height: 100px;">
+                                        {% if request.user.image %}
+                                        <img src="{{ request.user.image.url }}" alt="" style="width: 100px; height: 100px;">
                                         {% else %}
                                         <img src="https://t3.ftcdn.net/jpg/03/46/83/96/360_F_346839683_6nAPzbhpSkIpb8pmAwufkC7c5eD7wYws.jpg" class="" style="width: 100px; height: 100px;">
                                         {% endif %}
