--- a/users/templates/users/wishlist.html
+++ b/users/templates/users/wishlist.html
@@ -7,8 +7,8 @@
     <div class="row mt-5 text-center justify-content-center">
         <h2 class="my-5">{{ user.username }}님의 프로필</h2>
         <div>
-            {% if profile.image %}
-            <img src="{{ profile.image.url }}" alt="" style="width: 100px; height: 100px;">
+            {% if request.user.image %}
+            <img src="{{ request.user.image.url }}" alt="" style="width: 100px; height: 100px;">
             {% else %}
             <img src="https://dummyimage.com/1200x960/000000/c4c4c4" class="" style="width: 100px; height: 100px;">
             {% endif %}
