--- a/Restaurant/templates/restaurant/search.html
+++ b/Restaurant/templates/restaurant/search.html
@@ -14,7 +14,7 @@
     <b>&nbsp;&nbsp&nbsp;&nbsp조금 더 정확한 단서가 필요합니다</b>
     <a></a>
     <img src="https://scontent-gmp1-1.xx.fbcdn.net/v/t1.6435-9/157697457_874279869803643_4795892811642483961_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=730e14&_nc_ohc=ykYmfLY8qPgAX-TPtlr&_nc_ht=scontent-gmp1-1.xx&oh=00_AfDLwBkNFd-3YcjMG4T1NKnGeUDq5heqyWAOthZAwDovnQ&oe=638C18C6"
-        alt="">
+        alt="" style="height: 40%; width: 40%;">
 </div>
 {% else %}
 
