--- a/users/templates/users/signup.html
+++ b/users/templates/users/signup.html
@@ -22,7 +22,7 @@
                                     {% csrf_token %}
                                     {% bootstrap_form form %}
                                     <div class="d-flex justify-content-md-center">
-                                    {% bootstrap_button button_type="submit" content="OK" %}
+                                    {% bootstrap_button button_type="submit" id="detail_btn" content="OK" %}
                                 </div>
                                 </form>
                         </div>
