--- a/users/templates/users/wishlist.html
+++ b/users/templates/users/wishlist.html
@@ -38,7 +38,7 @@
         </div>
         <!-- buttons -->
         <div>
-            <a class="btn btn-outline-primary" href="{% url 'users:detail' user.pk %}">뒤로가기</a>
+            <a class="btn btn-outline-primary" id="detail_btn" href="{% url 'users:detail' user.pk %}">뒤로가기</a>
         </div>
 
 
