--- a/Restaurant/templates/restaurant/detail.html
+++ b/Restaurant/templates/restaurant/detail.html
@@ -45,25 +45,27 @@
     </div> 
    
 </div>
+<div class="d-flex justify-content-end ">
 {% if request.user.is_authenticated %}
 <!-- 리뷰 게시글 -->
-<div class="text-end my-3">
-    <a href="{% url 'reviews:review_create' info.pk %}" class="btn btn-primary">리뷰 작성</a>
-</div>
+                <div class="text-end m-1">
+                    <a href="{% url 'reviews:review_create' info.pk %}" class="btn btn-sm" id="detail_btn">리뷰 작성</a>   
+                </div>
                 <!--슈퍼 유저인지 확인-->
                 {% if request.user.is_superuser %}
                 <!--가게 정보 수정 및 삭제-->
-                <div class="text-end my-3">
-                    <a href="{% url 'Restaurant:update' info.pk %}" class="btn btn-primary">가게 정보 수정</a>
+                <div class="text-end m-1">
+                    <button class="btn btn-sm" id="detail_btn" onclick="location.href='/Restaurant/{{ info.pk }}/update/'">수정</button>
                 </div>
-                <div class="text-end my-3">
-                    <a href="{% url 'Restaurant:delete' info.pk %}" class="btn btn-primary">가게 삭제</a>
+                <div class="text-end m-1">
+                        <button class="btn btn-sm" id="detail_btn" data-bs-toggle="modal" data-bs-target="#delete_modal">삭제</button>
                 </div>
+                
                 {% else %}
                 {% endif %}
 {% else %}
 {% endif %}
-
+</div>
 
 <table class="table table-hover text-center">
     <thead class="table-dark">
@@ -90,6 +92,33 @@
         {% endfor %}
     </tbody>
 </table>
+
+
+
+<div id="delete_modal" class="modal fade" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">삭제경고</h5>
+                <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>가게 정보를 삭제하시겠습니까?</p>
+            </div>
+            <div class="modal-footer">
+                <button onclick="deleteModal()" type="button" class="btn btn-dark">삭제하기</button>
+                <button type="button" class="btn btn-light" data-bs-dismiss="modal">취소하기</button>
+            </div>
+        </div>
+    </div>
+    <script type="text/javascript">
+      function deleteModal() {
+          location.replace('/Restaurant/{{ info.pk }}/delete/');
+      }
+  </script>
+</div>
 
 <script>
     var st = JSON.parse("{{ storeJson|escapejs }}");
