--- a/reviews/templates/reviews/detail.html
+++ b/reviews/templates/reviews/detail.html
@@ -47,12 +47,19 @@
                   <hr>
                   <div class="d-flex justify-content-end">
                     <div class="text-right" style="margin-top:-15px;">
-                      {% if request.user == review.user %}
-                          <button class="btn btn-sm" id="detail_btn" onclick="location.href='/reviews/{{ review.id }}/update/'">수정</button>
-                          <button class="btn btn-sm" id="detail_btn" data-bs-toggle="modal" data-bs-target="#delete_modal">삭제</button>
-                          <button class="btn btn-sm" id="detail_btn" onclick="location.href='/Restaurant/{{ review.Restaurant_id }}/'">목록으로</button>
-                        {% else %}
-                          <button class="btn btn-sm" id="detail_btn" onclick="location.href='/Restaurant/{{ review.Restaurant_id }}/'">목록으로</button>
+                      {% if request.user.is_superuser %}
+                      <button class="btn btn-sm" id="detail_btn" onclick="location.href='/reviews/{{ review.id }}/update/'">수정</button>
+                      <button class="btn btn-sm" id="detail_btn" data-bs-toggle="modal" data-bs-target="#delete_modal">삭제</button>
+                      <button class="btn btn-sm" id="detail_btn" onclick="location.href='/Restaurant/{{ review.Restaurant_id }}/'">목록으로</button>
+                      {% else %}
+                      
+                        {% if request.user == review.user %}
+                            <button class="btn btn-sm" id="detail_btn" onclick="location.href='/reviews/{{ review.id }}/update/'">수정</button>
+                            <button class="btn btn-sm" id="detail_btn" data-bs-toggle="modal" data-bs-target="#delete_modal">삭제</button>
+                            <button class="btn btn-sm" id="detail_btn" onclick="location.href='/Restaurant/{{ review.Restaurant_id }}/'">목록으로</button>
+                          {% else %}
+                            <button class="btn btn-sm" id="detail_btn" onclick="location.href='/Restaurant/{{ review.Restaurant_id }}/'">목록으로</button>
+                          {% endif %}
                         {% endif %}
                     </div>
                   </div>
