--- a/users/templates/users/profile_update.html
+++ b/users/templates/users/profile_update.html
@@ -10,7 +10,7 @@
     <form action="" method="POST" enctype="multipart/form-data">
       {% csrf_token %}
       {% bootstrap_form profile_form %}
-      <button type="submit" class="btn btn-outline-dark">수정하기</button>
+      <button type="submit" class="btn btn-outline-dark" id="detail_btn">수정하기</button>
     </form>
   </div>
 </div>
